--- a/main.html
+++ b/main.html
@@ -5,17 +5,16 @@
         <title>gatya</title>
         <meta name="sample" content="gatya">
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/jquery-3.6.0.min.js"></script>
         <script src="js/index.js"></script>
     </head>
 
     <body>
-        <a href="main2.html" class="button">
-            <img src="img/button1.png" alt="1回跳躍する">
-        </a>
-        <a href="main2.html" class="button">
-            <img src="img/button2.png" alt="10回跳躍する">
-        </a>
-        
+        <div class="button">
+            <a href="../html/main2.html" class="tyoyaku">
+                <img src="../img/button1.png" alt="1回跳躍する">
+            </a>
+        </div>
     </body>
 
 </html>
