--- a/top.html
+++ b/top.html
@@ -5,17 +5,19 @@
         <title>gatya</title>
         <meta name="sample" content="gatya">
         <link rel="stylesheet" href="css/top.css">
+        <script src="js/jquery-3.6.0.min.js"></script>
+        <script src="js/index.js"></script>
     </head>
 
     <body>
-        <script src="js/index.js"></script>
 
         <div class="aicon">
-            <img src="img/aicon.png">
+            <img src="../img/aicon.png">
         </div>
         <div class="exampleback">
             <a class="example" href="main.html">ガチャ画面へ行く</a>
         </div>
+
     </body>
 
 </html>
