--- a/card_all.html
+++ b/card_all.html
@@ -5,18 +5,19 @@
         <title>gatya</title>
         <meta name="sample" content="gatya">
         <link rel="stylesheet" href="css/card_all.css">
+        <script src="js/jquery-3.6.0.min.js"></script>
+        <script src="js/index.js"></script>
     </head>
 
-    <body>
-        <script src="js/index.js"></script>
-        
-        <div class="exampleback">
-            <a class="example" href="top.html">トップ画面へ行く</a>
+    <body onload="loadFinished1()">
+        <div class="button">
+            <div class="exampleback">
+                <a class="example1" href="top.html">トップ画面へ行く</a>
+            </div>
+            <div class="exampleback">
+                <a class="example2" href="main.html">ガチャ画面へ行く</a>
+            </div>
         </div>
-        <div class="exampleback">
-            <a class="example" href="main.html">ガチャ画面へ行く</a>
-        </div>
-        
     </body>
 
 </html>
